--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -2,5 +2,7 @@ body {
   .header {
     background-color: $primary-color;
     color: $white-color;
+    max-width: 1240px;
+    margin: 0 auto;
   }
 }
