--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: firsttheme
+Theme Name: _themename
 Author: Ahmad Raza
 Author URI: https://ahmadraza.ga/
 Description: My first WordPress theme.
 Version: 1.0
 License: GNU General Public License version 3.0 & Envato Regular/Extended License
 License URI: https://www.gnuu.org/license/gpl-3.0.html & http://themeforest.net/licenses
-Text Domain: firsttheme
+Text Domain: _themename
 Tags: responsive, translation-ready
 */
