--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ Author: Ahmad Raza
 Author URI: https://ahmadraza.ga/
 Description: My first WordPress theme.
 Version: 1.0
+Requires at least: 5.0
+Tested up to: 5.4
+Requires PHP: 7.0
 License: GNU General Public License version 3.0 & Envato Regular/Extended License
 License URI: https://www.gnuu.org/license/gpl-3.0.html & http://themeforest.net/licenses
 Text Domain: _themename
