--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ Requires PHP: 7.0
 License: GNU General Public License version 3.0 & Envato Regular/Extended License
 License URI: https://www.gnuu.org/license/gpl-3.0.html & http://themeforest.net/licenses
 Text Domain: _themename
-Tags: responsive, translation-ready
+Tags: translation-ready
 */
